--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,14 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
-    "name": "laravel/react-starter-kit",
+    "name": "assignment-deadline-tracker",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
+    "description": "Assignment Deadline Tracker - A smart deadline management system for students.",
     "keywords": [
+        "assignment-tracker",
+        "deadline-management",
+        "student-productivity",
         "laravel",
-        "framework"
+        "react"
     ],
     "license": "MIT",
     "require": {
